argocd/cluster-resources/apps/argocd/operator/ingress.ftl.yaml
  <#if (!config.application.openshift && config.application.insecure)>
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argocd
    namespace: "${config.application.namePrefix}${config.features.argocd.namespace}"
    labels:
      app: argocd-server
    annotations:
      traefik.ingress.kubernetes.io/router.entrypoints: web # Only reachable via HTTP
      traefik.ingress.kubernetes.io/router.tls: "false" # Disable tls for router
  spec:
    rules:
      - host: "${argocd.host}"
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: argocd-server
                  port:
                    number: 80
    </#if>
